2007-03-28  Chao-ying Fu  <fu@mips.com>

	* doc/extend.texi (Fixed-Point): Change "integer suffix" to
	"fixed-suffix".
	* c-typeck.c (c_common_type): Reduce ibit1 and ibit2 by 1 for signed
	integer types.
	(build_unary_op): Process ++ and -- for fract types to invert
	code and change inc from 1 to -1.
	* fixed-value.c (fixed_convert_from_real): Floating-point 1.0 should
	overflow if SATP is false.
	* convert.c (convert_to_fixed): We can convert integer 1 to accum
	types, but not to fract types.

2007-03-26  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (IX86_BUILTIN_CMPNEPD, IX86_BUILTIN_CMPNESD):
	Remove.
	(IX86_BUILTIN_PSLLW128, IX86_BUILTIN_PSLLD128, IX86_BUILTIN_PSLLQ128,
	IX86_BUILTIN_PSRAW128, IX86_BUILTIN_PSRAD128, IX86_BUILTIN_PSRLW128,
	IX86_BUILTIN_PSRLD128, IX86_BUILTIN_PSRLQ128): Remove.
	(ix86_init_mmx_sse_builtins): Remove v8hi_ftype_v8hi_v2di and
	v4si_ftype_v4si_v2di.   Remove __builtin_ia32_psllw128,
	__builtin_ia32_pslld128, __builtin_ia32_psllq128,
	__builtin_ia32_psrlw128, __builtin_ia32_psrld128,
	__builtin_ia32_psrlq128, __builtin_ia32_psraw128 and
	__builtin_ia32_psrad128 builtins.

2007-03-26  Uros Bizjak  <ubizjak@gmail.com>

	* reg-stack.c (replace_reg): Use IN_RANGE macro in gcc_assert().
	* config/i386/constraints.md
	(define_constraint "I"): Use IN_RANGE macro.
	(define_constraint "J"): Ditto.
	(define_constraint "K"): Ditto.
	(define_constraint "M"): Ditto.
	(define_constraint "N"): Ditto.
	(define_constraint "O"): Ditto.
	* config/i386/predicates.md
	(define_predicate "register_no_elim_operand"): Use IN_RANGE macro.
	(define_predicate "const_0_to_3_operand"): Ditto.
	(define_predicate "const_0_to_7_operand"): Ditto.
	(define_predicate "const_0_to_15_operand"): Ditto.
	(define_predicate "const_0_to_63_operand"): Ditto.
	(define_predicate "const_0_to_255_operand"): Ditto.
	(define_predicate "const_1_to_31_operand"): Ditto.
	(define_predicate "const_2_to_3_operand"): Ditto.
	(define_predicate "const_4_to_7_operand"): Ditto.
